@@ -370,7 +370,11 @@ bool hrm_new(int hrmValue) {
     hadBeat = hrm_had_beat();
   }
 
-  hrmInfo.avg = ((hrmInfo.avg*31) + h) >> 5;
+  if (hrmPollInterval > 30) // 40 = 25Hz, Bangle.js 2 default sample rate
+    hrmInfo.avg = ((hrmInfo.avg*7) + h) >> 3;
+  else // 20 = 50Hz, Bangle.js 1 default sample rate
+    hrmInfo.avg = ((hrmInfo.avg*15) + h) >> 4;
+  
 
   return hadBeat;
 }
