@@ -31,6 +31,7 @@
             nRF5x: Fix memory leak (of address) when using NRF.setScan/requestDevice/findDevice (regression in 2v13)
             Fix issue with const in a module when called from a scope with const already in (fix #2215, fix #2207)
             Add `seaLevelPressure` to Bangle.setOptions (fix #2213)
+            Bangle.js: speed up HRM average adjustment (specifically when sample rate is 25Hz, eg. for Bangle.js 2)
             
      2v13 : Memory usage improvement: Function scopes no longer stored as an array if they only contain one scope
             Memory usage improvement: The root scope is never stored in the scope list (it's searched by default)
